# haven-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AIPanel.tsx  CodeEditor.tsx  IntentGraph.tsx  NotificationStack.tsx  Sidebar.tsx  StatusBar.tsx  Terminal.tsx  TopBar.tsx
src/engine/: ModelRouter.ts  NiyahEngine.ts  OllamaService.ts  SovereignBridge.ts  SovereignSessionCleaner.ts  ThreeLobeAgent.ts
src/i18n/: index.ts
src/store/: index.ts
src/styles/: globals.css
